--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,126 @@
-body {
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: cursive;
+}
+.cover {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url(assets/images/1.jpeg);
+  background-size: cover;
+}
+.container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding-top: 8em;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container h1,
+h4 {
+  text-align: center;
+  color: #ffff;
+}
+.startBtn,
+.stopBtn {
+  width: 6em;
+  font-size: 1em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5px;
+  z-index: 3;
+}
+.hide {
+  visibility: hidden;
+}
+
+.circles {
+  display: inline-flex;
+  cursor: url("assets/images/1.cur"), auto;
+  justify-content: center;
+  margin: 2em;
+}
+.circle {
+  pointer-events: none;
+  cursor: url("assets/images/1.cur");
+  border-radius: 50%;
+  width: 200px;
+  height: 200px;
+  box-shadow: 2px 4px 8px rgba(0, 0, 0, 1);
+  opacity: 0.9;
+  margin: 1em;
+}
+
+.circle-overlay {
+  position: absolute;
+  left: 50px;
+  top: 50px;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 4px 10px rgba(0, 0, 0, 0.5) inset,
+    0px 0px 0px 1000px rgba(0, 0, 0, 0.5);
+}
+
+.image_input {
+  padding-left: 5px;
+}
+.active {
+  content: url(assets/images/7.png);
+  cursor: url("assets/images/1.cur"), auto;
+  overflow: hidden;
+  background-size: cover;
+  box-shadow: 2px 4px 8px rgba(0, 0, 0, 1),
+    0px 0px 0px 1000px rgba(0, 0, 0, 0.5);
+}
+
+.header {
+  top: 0;
+  left: 0;
+  z-index: 3;
+  display: flex;
+  justify-content: center;
+  padding: 13px 20px;
+  font-size: 15px;
+  color: #333;
+  box-sizing: border-box;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+  background: rgba(255, 255, 255, 0.8);
+  border-radius: 30px;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: grid;
+  justify-items: center;
+  align-items: center;
+}
+
+.gameover-box {
+  background: white;
+  padding: 1rem;
+  width: 40%;
+  min-height: 25%;
+  border-radius: 5px;
+  position: relative;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+}
+
+.gameover_box button {
+  background: lightgrey;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  cursor: pointer;
 }
